--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="hero-text">
           <p class="hero-kicker">AI/ML Engineer · GenAI · Prompt Engineer</p>
           <h2>AI is not just a tool for Automation; <br>It's an enabler for Augmentation.</h2>
-          <h3><i>❝ I have always been convinced that the only way to get artificial intelligence to work is to do the computation in a way similar to the human brain. ❝</i> -- Geoffrey Hinton</h3>
+          <h3><i>❝ I have always been convinced that the only way to get artificial intelligence to work is to do the computation in a way similar to the human brain. ❞</i> -- Geoffrey Hinton</h3>
           <p class="hero-subtitle">
              Machine Learning Engineer with 3+ years of hands-on experience designing, building, and deploying production-grade ML, Deep Learning, and Generative AI systems for enterprise financial and healthcare clients, including TD Bank, RBC, and Quest Diagnostics. I specialize in LLM engineering, RAG pipelines, and agentic AI workflows, alongside traditional ML (Computer Vision, NLP, Recommendation Systems), and have shipped models serving 1,000+ concurrent users with sub-100ms latency and 99.2% uptime in Kubernetes-based environments.
           </p>
