--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
       <div class="container">
         <div class="section-header">
           <h2>Selected Projects</h2>
-          <p>Projects that showcase how I design, build, and ship production-grade ML, GenAI, and MLOps systems. <a href="https://github.com/Dhruv1603">GitHub</a></p>
+          <p>Projects that showcase how I design, build, and ship production-grade ML, GenAI, and MLOps systems.</p>
         </div>
 
         <div class="cards-grid">
@@ -581,6 +581,10 @@
               <span class="tag">Computer Vision</span>
               <span class="tag">Affective Computing</span>
             </div>
+
+            <p style="margin-top:0.6rem;font-size:0.82rem;">
+              <a href="https://github.com/Dhruv1603/Emotion-AI" target="_blank" rel="noreferrer">View on GitHub →</a>
+            </p>
           </article>
         </div>
       </div>
