--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="hero" id="about">
       <div class="container hero-grid">
         <div class="hero-text">
-          <p class="hero-kicker">AI/ML Engineer · GenAI · Prompt Engineer</p>
+          <p class="hero-kicker">AI/ML Engineer • MLOps Engineer • Data Scientist • GenAI Engineer</p>
           <h2>AI is not just a tool for Automation; <br>It's an enabler for Augmentation.</h2>
           <h3><i>❝ I have always been convinced that the only way to get artificial intelligence to work is to do the computation in a way similar to the human brain. ❞</i> -- Geoffrey Hinton</h3>
           <p class="hero-subtitle">
@@ -60,14 +60,14 @@
             <a href="#projects" class="btn-secondary">View Projects</a>
           </div>
           <div class="hero-meta">
-            <span>Based in Toronto, ON <br> Open to AI Engineer / ML Engineer / Prompt Engineer / MLOps / GenAI roles in Toronto & Remote.</span>
+            <span>Based in Toronto, ON <br> Open to AI/ML Engineer / Data Scientist / Prompt Engineer / MLOps / GenAI roles in Toronto & Remote.</span>
           </div>
         </div>
         <div class="hero-card">
           <div class="hero-card-inner">
             <p class="hero-card-title">Quick Snapshot</p>
             <ul class="hero-card-list">
-              <li><span>Role:</span> AI/ML Engineer ● Prompt Engineer ● MLOps ● GenAI </li>
+              <li><span>Role:</span>AI/ML Engineer • MLOps Engineer • Prompt Engineer • Data Scientist • GenAI Engineer</li>
               <li><span>Experience:</span> 3+ years building production ML & GenAI systems </li>
               <li><span>Strengths:</span> LLMs & RAG, MLOps on GCP, scalable APIs, monitoring & reliability </li>
               <li><span>Domains:</span> USA/Canada Healthcare , fintech/Insurtech, B2B analytics, RegTech, EdTech, E-Comm</li>
