--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dhruv Joshi | AI/ML & GenAI Engineer</title>
+  <title>Dhruv Joshi | AI/ML Engineer</title>
   <meta name="description" content="Dhruv Joshi – ML Engineer & GenAI Engineer designing and deploying production-grade ML, MLOps, and LLM/RAG systems on GCP, Kubernetes, and Vertex AI." />
 
   <!-- Favicon -->
@@ -853,7 +853,7 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> Dhruv Joshi · ML & GenAI Engineer</p>
+      <p>© <span id="year"></span> Dhruv Joshi · AI/ML Engineer</p>
       <p class="footer-note">Built with HTML, CSS, and a little JavaScript.</p>
     </div>
   </footer>
