--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <a href="#projects" class="btn-secondary">View Projects</a>
           </div>
           <div class="hero-meta">
-            <span>Based in Toronto, ON <br> Open to AI/ML Engineer / Data Scientist / Prompt Engineer / MLOps / GenAI roles in Toronto & Remote.</span>
+            <span>Based in Toronto, ON <br> Open to AI/ML Engineer / Data Scientist / Prompt Engineer / MLOps / GenAI roles <br>Toronto & Remote.</span>
           </div>
         </div>
         <div class="hero-card">
