--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="hero" id="about">
       <div class="container hero-grid">
         <div class="hero-text">
-          <p class="hero-kicker">AI/ML Engineer • MLOps Engineer • Data Scientist • GenAI Engineer</p>
+          <p class="hero-kicker">AI/ML Engineer • MLOps Engineer • Data Scientist • Prompt Engineer • GenAI Engineer</p>
           <h2>AI is not just a tool for Automation; <br>It's an enabler for Augmentation.</h2>
           <h3><i>❝ I have always been convinced that the only way to get artificial intelligence to work is to do the computation in a way similar to the human brain. ❞</i> -- Geoffrey Hinton</h3>
           <p class="hero-subtitle">
